@@ -38,7 +38,7 @@
 		<mainClass>interfacebuilder.SpringBootApplication</mainClass>
 
 		<!-- version definitions -->
-		<lombok.version>1.18.18</lombok.version>
+		<lombok.version>1.18.20</lombok.version>
 		<byte-buddy.version>1.10.22</byte-buddy.version>
 		<jakarta-xml-bind.version>2.3.3</jakarta-xml-bind.version><!-- 2.3.3 -> 3.0.0 -->
 		<jakarta-transaction.version>1.3.3</jakarta-transaction.version><!-- 1.3.3 -> 2.0.0 -->
@@ -50,15 +50,15 @@
 																still depends on javax.persistence -->
 		<hibernate-validator.version>6.2.0.Final</hibernate-validator.version>
 		<h2.version>1.4.200</h2.version>
-		<mockito.version>3.8.0</mockito.version>
-		<mockito-junit-jupiter.version>3.8.0</mockito-junit-jupiter.version>
-		<javafx.version>17-ea+5</javafx.version>
-		<kryo.version>5.0.4</kryo.version>
+		<mockito.version>3.9.0</mockito.version>
+		<mockito-junit-jupiter.version>3.9.0</mockito-junit-jupiter.version>
+		<javafx.version>17-ea+6</javafx.version>
+		<kryo.version>5.1.0</kryo.version>
 		<pecoff4j.version>0.3.2</pecoff4j.version>
 		<asm.version>9.1</asm.version>
 		<junit-jupiter.version>5.8.0-M1</junit-jupiter.version>
 		<log4j2.version>2.14.1</log4j2.version>
-		<lmax-disruptor.version>3.4.2</lmax-disruptor.version>
+		<lmax-disruptor.version>3.4.3</lmax-disruptor.version>
 		<fontawesomefx-fontawesome.version>4.7.0-9.1.2</fontawesomefx-fontawesome.version>
 		<fontawesomefx-commons.version>9.1.2</fontawesomefx-commons.version>
 		<slf4j.version>1.7.30</slf4j.version>
@@ -363,7 +363,7 @@
 			<dependency>
 				<groupId>com.sun.istack</groupId>
 				<artifactId>istack-commons-runtime</artifactId>
-				<version>4.0.0</version>
+				<version>4.0.1</version>
 			</dependency>
 			<!-- https://mvnrepository.com/artifact/org.dom4j/dom4j for hibernate core -->
 			<dependency>
@@ -445,21 +445,6 @@
 							<version>${lombok.version}</version>
 						</path>
 					</annotationProcessorPaths>
-
-					<!-- jdk 16 fix until lombok's next update -->
-					<fork>true</fork>
-					<compilerArgs>
-						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
-						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
-					</compilerArgs>
 				</configuration>
 				<dependencies>
 					<dependency>
